Properly handle Numpad keys & KeyID enum line up with VirtualKey's

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ keywords = ["keyboard", "mouse", "gamepad", "hid"]
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser", "basetsd", "hidpi", "winnt", "libloaderapi", "fileapi", "hidsdi", "handleapi"] }
+enum-primitive-derive = "^0.1"
+num-traits = "^0.1"
